2015-05-01  Mark Wielaard  <mjw@redhat.com>

	* configure.ac (debugpred): Use and set use_debugpred_val.
	(textrelcheck): Explicitly set enable_textrelcheck to yes or no.
	(symbol-versioning): Likewise for enable_symbol_versioning.
	AC_MSG_NOTICE overview of enabled/disabled features.

2015-04-23  Max Filippov  <jcmvbkbc@gmail.com>

	* configure.ac: Add --disable-symbol-versioning.

2015-04-14  Mark Wielaard  <mjw@redhat.com>

	* configure.ac (ac_cv_c99): Add explicit checks for all GNU99
	extensions used.

2015-03-13  Mark Wielaard  <mjw@redhat.com>

	* configure.ac (ac_cv_c99): Add explicit return.
	(ac_cv_tls): Add stdlib.h include.

2014-12-18  Mark Wielaard  <mjw@redhat.com>

	* configure.ac: Set version to 0.161.
	* NEWS: Add dwarf.h additions.

2014-12-15  Josh Stone  <jistone@redhat.com>

	* .gitignore: Add config/compile as installed by automake 1.14.

2014-11-27  Mark Wielaard  <mjw@redhat.com>

	* configure.ac: Add --disable-textrelcheck.

2014-10-06  Mark Wielaard  <mjw@redhat.com>

	* NEWS: New section 0.161. Add dwarf_peel_type.

2014-08-25  Mark Wielaard  <mjw@redhat.com>

	* configure.ac: Set version to 0.160.
	* NEWS: Add removal of DW_TAG_mutable_type, LZMA .ko.xz kernel
	module support, ARM THUMB functions and ppc64le ELFv2 abi backends.

2014-08-15  Mark Wielaard  <mjw@redhat.com>

	* NEWS: Add dwarf_cu_die.

2014-08-15  Mark Wielaard  <mjw@redhat.com>

	* NEWS: Add dwarf_cu_getdwarf.

2014-07-18  Mark Wielaard  <mjw@redhat.com>

	* configure.ac (AC_CHECK_TYPE): Test for struct user_regs_struct.

2014-05-26  Mark Wielaard  <mjw@redhat.com>

	* NEWS: New section 0.160. Add unstrip --force.

2014-05-17  Mark Wielaard  <mjw@redhat.com>

	* configure.ac: Set version to 0.159.
	* NEWS: Add entries for version 0.159.

2014-05-02  Mark Wielaard  <mjw@redhat.com>

	* NEWS: Add note about dwz support no longer being experimental and
	new helper functions.
	* configure.ac: Remove --enable-dwz.