@@ -15,48 +15,16 @@
 # You should have received a copy of the GNU General Public License
 # along with this program.  If not, see <http://www.gnu.org/licenses/>.
 
+if test -n "$ELFUTILS_DISABLE_DEMANGLE"; then
+  exit 77
+fi
+
 . $srcdir/test-subr.sh
 
-# // g++ dwarfinlines.cpp -g -o testfiledwarfinlines -O2
-# int
-# fubar (int x)
-# {
-#   __asm__ ( "nop" ::: );
-#   return 42 / x - 2;
-# }
-#
-# void foobar (int z1, int z2)
-# {
-#   __asm__ ( "nop" ::: );
-#   int x = z1 + z2;
-#   while (z1 + x + 1 != 42)
-#     x = fubar (z1 + z2 + x);
-# }
-#
-# void bar (int z)
-# {
-#   int a, b;
-#   a = b = z / 2;
-#   foobar(a, b);
-# }
-#
-# void foo (int x)
-# {
-#   if (x > 0)
-#     bar(x - 2);
-# }
-#
-# void fu (int y)
-# {
-#   __asm__ ( "nop" ::: );
-#   foo (y + 1);
-# }
-#
-# int
-# main (int argc, char **argv)
-# {
-#   fu (argc);
-# }
+# See run-stack-d-test.sh and run-stack-i-test.sh
+# Same tests, now with demangler support, no -r, and without -d.
+# Only change in output is an explit fu(int) instead of _Z2fui.
+
 testfiles testfiledwarfinlines testfiledwarfinlines.core
 
 # Depending on whether we are running make check or make installcheck
@@ -68,45 +36,59 @@ else
 STACKCMD=${abs_top_builddir}/src/stack
 fi
 
-# Without -d the top function comes out as fu. Use --raw to not demangle.
-testrun_compare ${abs_top_builddir}/src/stack -r -n 2 -e testfiledwarfinlines --core testfiledwarfinlines.core<<EOF
+# Without -d the top function comes out as fu.
+testrun_compare ${abs_top_builddir}/src/stack -n 2 -e testfiledwarfinlines --core testfiledwarfinlines.core<<EOF
 PID 13654 - core
 TID 13654:
-#0  0x00000000004006c8 _Z2fui
+#0  0x00000000004006c8 fu(int)
 #1  0x00000000004004c5 main
 $STACKCMD: tid 13654: shown max number of frames (2, use -n 0 for unlimited)
 EOF
 
 # But when asking for source we see it is actually on line 6.
-# (Which is in function fubar, not fu). Use --raw to not demangle.
-testrun_compare ${abs_top_builddir}/src/stack -r -n 2 -s -e testfiledwarfinlines --core testfiledwarfinlines.core<<EOF
+# (Which is in function fubar, not fu).
+testrun_compare ${abs_top_builddir}/src/stack -n 2 -s -e testfiledwarfinlines --core testfiledwarfinlines.core<<EOF
 PID 13654 - core
 TID 13654:
-#0  0x00000000004006c8 _Z2fui
+#0  0x00000000004006c8 fu(int)
     /home/mark/src/tests/dwarfinlines.cpp:6
 #1  0x00000000004004c5 main
     /home/mark/src/tests/dwarfinlines.cpp:39
 $STACKCMD: tid 13654: shown max number of frames (2, use -n 0 for unlimited)
 EOF
 
-# So with --debugname we get the function correct as fubar.
-testrun_compare ${abs_top_builddir}/src/stack -n 2 -d -e testfiledwarfinlines --core testfiledwarfinlines.core<<EOF
+# With --inlines we get all inlined calls. Note they share the same
+# address.
+testrun_compare ${abs_top_builddir}/src/stack -n 6 -i -e testfiledwarfinlines --core testfiledwarfinlines.core<<EOF
 PID 13654 - core
 TID 13654:
 #0  0x00000000004006c8 fubar
-#1  0x00000000004004c5 main
-$STACKCMD: tid 13654: shown max number of frames (2, use -n 0 for unlimited)
+#1  0x00000000004006c8 foobar
+#2  0x00000000004006c8 bar
+#3  0x00000000004006c8 foo
+#4  0x00000000004006c8 fu(int)
+#5  0x00000000004004c5 main
+$STACKCMD: tid 13654: shown max number of frames (6, use -n 0 for unlimited)
 EOF
 
-# Which now matches the source line (again 6 of course).
-testrun_compare ${abs_top_builddir}/src/stack -n 2 -s -d -e testfiledwarfinlines --core testfiledwarfinlines.core<<EOF
+# With --source we can also see where in the source the inlined frames
+# where originally called from.
+testrun_compare ${abs_top_builddir}/src/stack -n 6 -s -i -e testfiledwarfinlines --core testfiledwarfinlines.core<<EOF
 PID 13654 - core
 TID 13654:
 #0  0x00000000004006c8 fubar
     /home/mark/src/tests/dwarfinlines.cpp:6
-#1  0x00000000004004c5 main
+#1  0x00000000004006c8 foobar
+    /home/mark/src/tests/dwarfinlines.cpp:14
+#2  0x00000000004006c8 bar
+    /home/mark/src/tests/dwarfinlines.cpp:21
+#3  0x00000000004006c8 foo
+    /home/mark/src/tests/dwarfinlines.cpp:27
+#4  0x00000000004006c8 fu(int)
+    /home/mark/src/tests/dwarfinlines.cpp:33
+#5  0x00000000004004c5 main
     /home/mark/src/tests/dwarfinlines.cpp:39
-$STACKCMD: tid 13654: shown max number of frames (2, use -n 0 for unlimited)
+$STACKCMD: tid 13654: shown max number of frames (6, use -n 0 for unlimited)
 EOF
 
 exit 0
